<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:theme="@style/Base.Theme.ToDoList"
        app:elevation="20dp"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            app:statusBarScrim="@android:color/transparent"
            android:background="@color/colorBackground"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/close"
            app:navigationIconTint="@color/colorBackIcon">

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/save"
                android:textColor="@color/colorTextSecondary"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:background="@drawable/background_shape"
                android:gravity="start"
                android:hint="@string/text_for_field"
                android:maxLines="500"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_importance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:fontFamily="@font/roboto_regular"
                android:paddingTop="16dp"
                android:text="@string/importance"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/content"
                app:layout_constraintTop_toBottomOf="@id/content" />

            <Spinner
                android:id="@+id/importance"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorBackground"
                android:paddingStart="9dp"
                android:paddingEnd="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_importance" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:alpha="0.2"
                android:background="@color/colorText"
                app:layout_constraintEnd_toEndOf="@id/content"
                app:layout_constraintStart_toStartOf="@id/label_importance"
                app:layout_constraintTop_toBottomOf="@id/importance" />

            <TextView
                android:id="@+id/label_deadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/deadline_label"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/content"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                tools:text="2 июня 2021"
                android:textColor="@color/colorTextSecondary"
                app:layout_constraintStart_toStartOf="@id/label_deadline"
                app:layout_constraintTop_toBottomOf="@id/label_deadline" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"
                app:layout_constraintBottom_toBottomOf="@id/deadline"
                app:layout_constraintEnd_toEndOf="@id/divider"
                app:layout_constraintTop_toTopOf="@id/label_deadline" />

            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:alpha="0.2"
                android:background="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deadline" />


            <ImageView
                android:id="@+id/label_delete"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/delete"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                app:layout_constraintStart_toStartOf="@id/deadline" />

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_label"
                android:textColor="@color/colorIconDelete"
                android:paddingBottom="60dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/label_delete"
                app:layout_constraintTop_toTopOf="@id/label_delete" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>